<resources>
    <string name="app_name">Pearls</string>
    <string name="net_connect_msg">No internet connection</string>
    <string name="menu_refresh_label">Refresh</string>
    <string name="menu_close_label">Close</string>
    <string name="title_activity_search">Pearls - Search</string>
    <string name="title_activity_languages">Pearls - Set Languages </string>
    <string name="search_tab_caption">Search</string>
    <string name="search_tab_caption_areas">Knowledge Areas</string>
    <string name="search_tab_caption_languages">Languages</string>

    <!-- Term Create/Edit Activity -->
    <string name="tv_term_form_caption">Area > Domain</string>

    <!-- Settings stuff -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="search_view_hint">Enter term to search</string>
    <string name="menu_item_add_domain">Add domain</string>
    <string name="menu_item_edit_area">Edit area</string>
    <string name="menu_item_delete_area">Delete area</string>
    <string name="dlg_new_domain_hint">Enter new domain name</string>
    <string name="could_not_open_file">Couldn\'t open file</string>

    <string name="csv_table_init"><![CDATA[
        <style>
            .table {
                display: table;
                border-collapse: collapse;
            }
            .tableRow {
                display: table-row;
            }
            .tableCell {
                display: table-cell;
                border: 1px solid black;
                padding: .25em;
            }
            .tableCell:first-child {
                background-color: #33b5e5;
                color: white;
                text-align: center;
                vertical-align: middle;
            }
            .tableRow:first-child {
                background-color: #33b5e5;
                color: white;
            }
        </style>
        <div class="table">
    ]]>
    </string>
    <string name="radio_button_semicolon">Semi-colon (;)</string>
    <string name="radio_button_tab">Tab</string>
    <string name="radio_button_other">Other:</string>
    <string name="radio_button_comma">Comma (,)</string>
    <string name="csv_field_separator_label">Field separator:</string>
    <string name="csv_label_quotes">Field delimiter:</string>
    <string name="csv_tab_media">Media</string>
    <string name="csv_tab_areas">Areas</string>
    <string name="csv_tab_languages">Languages</string>
    <string name="tab_search">search</string>
    <string name="tab_search_areas">Knowledge areas</string>
    <string name="csv_reader_alert_msg">Perls couldn\'t handle the medium you sent and will abort after you dismiss this dialog</string>
    <string name="oops">Oops!</string>
    <string name="csv_reader_alert_btn">Abort</string>
    <string name="Languages_preferred_order">Long press on a language, drag and drop it up and down on stack to set your preferred order</string>
    <string name="import_csv_file">Import CSV file</string>
</resources>
